Sun Jan 29 15:28:22 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (DefineInt_RelocUpdater): Fix reloc issue against
	current area.
	* m_cpuctrl.c (Branch_RelocUpdater): Support more reloc combinations
	(based on what we have in DefineInt_RelocUpdater).

Sat Jan 28 13:48:16 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* area.h (Area): Add 'number' field. Change 'int norelocs' field into
	'uint32_t numRelocs'.
	* area.c (areaNew): Follow Area struct change.
	* symbol.h (Symbol): Change type 'codeSize' from size_t to uint32_t,
	'offset' from unsigned int to uint32_t.  Update comments on the meaning
	of 'used' field.
	* symbol.c (Symbol_CreateSymbolOut): Follow the new Symbol::used
	conventin.
	* output.c (Output_AOF, Output_ELF): Follow above changes.
	* reloc.c (relocELFOutput): Likewise.

Sat Jan 28 03:30:49 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* put.c (Put_DataWithOffset): Made local.  Change type of data
	parameter from ARMWord to uint64_t.  Increase area index for
	NOINIT areas.  Follow AREA_IMAGE to Area_IsNoInit change.
	(Put_FloatDataWithOffset): Use Put_DataWithOffset.
	(Put_InsWithOffset): Increase area index for NOINIT areas.
	Follow AREA_IMAGE to Area_IsNoInit change.  Allow zero value
	instruction in NOINIT area.
	* put.h (Put_DataWithOffset): Remove.
	* area.h (AREA_IMAGE): Remove.
	(Area_IsNoInit): Add.
	* output.c (Output_AOF): Follow AREA_IMAGE to Area_IsNoInit change.
	(Output_ELF): Likewise.

Fri Jan 27 03:11:21 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* output.c, output.h (outputInit, outputFinish, outputRemove,
	outputAof, outputElf): Rename to Output_Init, Output_Finish,
	Output_Remove, Output_AOF, Output_ELF.
	* main.c: Follow output.c/output.h renames.

Fri Jan 27 03:03:31 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (Symbol_CreateSymbolOut): Don't report the implicit area
	name for unused imported/exported symbols.

Sun Jan 22 19:31:25 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
